# swig

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile.in  configure.ac
Examples/: Makefile.in
Lib/csharp/: boost_intrusive_ptr.i
Lib/matlab/: matlabprimtypes.swg  matlabruntime.swg
Lib/python/: pycontainer.swg
Source/: CMakeLists.txt
Source/CParse/: parser.c  parser.h
Source/Include/: swigconfig.h.in
Source/Modules/: matlab.cxx  python.cxx
